test/conformance/chainsaw/verifyImages/clusterpolicy/standard/imageExtractors-none/task.yaml
apiVersion: tekton.dev/v1beta1
kind: Task
metadata:
  name: example-task-name
spec:
  steps:
    - name: ubuntu-example
      image: ubuntu:bionic
