test/conformance/chainsaw/verifyImages/clusterpolicy/standard/imageExtractors-none/02-task.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: task
spec:
  timeouts: {}
  try:
  - apply:
      file: task.yaml
  - assert:
      file: task.yaml
