test/conformance/chainsaw/verifyImages/clusterpolicy/standard/imageExtractors-none/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: imageextractors-none
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: crd.yaml
    - assert:
        file: crd-ready.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: tasks-no-extractor
  - name: step-02
    try:
    - apply:
        file: task.yaml
    - assert:
        file: task.yaml
